@@ -1,3 +1,7 @@
+2009-12-12  Michal Nazarewicz  <mina86/AT/mina86.com>
+
+	* Makefile: + fixed 'package' target
+
 2009-11-25  Michal Nazarewicz  <mina86/AT/mina86.com>
 
 	* mkpkg: + updated to create .txz packages
